<resources>
    <string name="app_name">AuthTest</string>

    <string name="signup_title">Create an account</string>
    <string name="signup_email_hint">E-mail address</string>
    <string name="signup_name_hint">First Name</string>
    <string name="signup_surname_hint">Last Name</string>
    <string name="signup_gender_hint">Gender</string>
    <string name="signup_gender_validation_empty_field">This field is empty!</string>
    <string name="signup_cta">SIGNUP</string>

    <string name="home_title">Welcome!</string>
    <string name="home_logout">Logout</string>
    <string name="home_last_name">Last Name:</string>
    <string name="home_first_name">First Name:</string>
    <string name="home_avatar">Avatar:</string>
    <string name="login_title">Already have an account</string>
</resources>